Hosted link added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
    <meta charset="UTF-8">
-   <title>Mock 1</title>
+   <title>Simple HTML | Cookies </title>
 </head>
 
 <body style="font-size: 24px;">
