--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                <li>1 Cup of sugar</li>
             </ul>
 
-            <ol><b>Ingredients</b><small>(may or may not be correct)</small>
+            <ol><b>Procedure</b><small>(may or may not be correct)</small>
                <li>Add eggs, flour and vanilla extract and mix</li>
                <li>Combine with sugar and baking powder and stir</li>
                <li>Eat half the cookie batter because it is delicious</li>
