--- a/index.html
+++ b/index.html
@@ -26,37 +26,35 @@
       </nav>
       <div class="header-content">
          <div class="nav-right">
-            <h1>Simple HTML page on Cookies</h1>
+            <h1>BAKING COOKIES SAVES!!</h1>
 
             <h3>Cookies Lover gather here, let's cook!</h3>
 
-            <h6>Let's add a recipe for some delicious chocolate chip cookies</h6>
+            <img src="./img/cookie.jpg" height=400 width=500>
 
-            <p>Home-made Cookies picture</p>
-
-            <img src="./img/cookie.jpeg" height=400 width=500>
-
-            <p>
-               Here is what the recipe calls for
-            </p>
-            <ul><b>Ingredients</b><small>(probably not right...)</small>
-               <li>6 Eggs</li>
-               <li>2 Cups of flour</li>
-               <li>2 Tablespoons of vanilla extract</li>
-               <li>2 Teaspoons of baking powder</li>
-               <li>1 Cup of sugar</li>
-            </ul>
-
-            <ol><b>Procedure</b><small>(may or may not be correct)</small>
-               <li>Add eggs, flour and vanilla extract and mix</li>
-               <li>Combine with sugar and baking powder and stir</li>
-               <li>Eat half the cookie batter because it is delicious</li>
-               <li>Take the rest of the cookie batter and make cookies</li>
-               <li>Bake at 350 for 25 minutes</li>
-               <li>Enjoy!</li>
-            </ol>
-            <hr>
-            Oh you don't trust us? You want to see the actual recipe? You can view it <a href="#">here</a>
+<div class="handle-bar">
+               <p>
+                  Here is what the recipe calls for
+               </p>
+               <ul><b>Ingredients</b><small>(probably not right...)</small>
+                  <li>6 Eggs</li>
+                  <li>2 Cups of flour</li>
+                  <li>2 Tablespoons of vanilla extract</li>
+                  <li>2 Teaspoons of baking powder</li>
+                  <li>1 Cup of sugar</li>
+               </ul>
+               
+               <ol><b>Procedure</b><small>(may or may not be correct)</small>
+                  <li>Add eggs, flour and vanilla extract and mix</li>
+                  <li>Combine with sugar and baking powder and stir</li>
+                  <li>Eat half the cookie batter because it is delicious</li>
+                  <li>Take the rest of the cookie batter and make cookies</li>
+                  <li>Bake at 350 for 25 minutes</li>
+                  <li>Enjoy!</li>
+               </ol>
+               <hr>
+               Oh you don't trust us? You want to see the actual recipe? You can view it <a href="#">here</a>
+</div>
 
          </div>
 
