--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   <li>Enjoy!</li>
                </ol>
                <hr>
-               Oh you don't trust us? You want to see the actual recipe? You can view it <a href="#">here</a>
+               <h4>Oh you don't trust us? You want to see the actual recipe? You can view it <a href="#">here</a></h4>
 </div>
 
          </div>
