--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                <div>
                   <label class="title">Additional Comments</label>
                   <br>
-                  <textarea name=""></textarea>
+                  <textarea name="" class="comment"></textarea>
                </div>
                <div class="submit-btn">
                   <input type="submit" value="Click to proceed">
